(feature) Nice error pages for application errors
Approach:

- Use the Rails default approach of rendering static pages:
  - Benefit: real errors get raised and logged to rollbar
  - Downside: some duplication of markup and styles between error pages
    and normal app pages
- Use the same css as the application error page which is on AWS
- Make the static pages minimal (no information which might get out of
  date) and link to a separate page, served by the app, which lists the
  contact phone numbers.
- Include back links on the 404 and 422 pages, but not on the 500 page:
  not sure it makes sense there?

--- a/public/500.html
+++ b/public/500.html
@@ -1,66 +1,46 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>We're sorry, but something went wrong (500)</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
+  <title>
+    Report a repair - We're really sorry, but something went wrong (500)
+  </title>
+  <meta content="width=device-width, initial-scale=1" name="viewport">
+  <meta content="ie-edge" http-equiv="x-ua-compatible">
+  <link href="https://fonts.googleapis.com/css?family=Droid+Sans:400,700" rel="stylesheet">
   <style>
-  .rails-default-error-page {
-    background-color: #EFEFEF;
-    color: #2E2F30;
-    text-align: center;
-    font-family: arial, sans-serif;
-    margin: 0;
-  }
-
-  .rails-default-error-page div.dialog {
-    width: 95%;
-    max-width: 33em;
-    margin: 4em auto 0;
-  }
-
-  .rails-default-error-page div.dialog > div {
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 12% 0;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
-
-  .rails-default-error-page h1 {
-    font-size: 100%;
-    color: #730E15;
-    line-height: 1.5em;
-  }
-
-  .rails-default-error-page div.dialog > p {
-    margin: 0 0 1em;
-    padding: 1em;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
+    #content,.wrapper{max-width:960px;margin:0 15px}@media (min-width:641px){#content,.wrapper{margin:0 30px}}@media (min-width:1020px){#content,.wrapper{margin:0 auto}}#content:after{content:"";display:block;clear:both}body,html{font-family:Droid Sans,arial,helvetica,sans-serif}body,div,h1,h2,header,html{margin:0;padding:0;vertical-align:baseline}main{display:block}html{font-size:62.5%;overflow-y:scroll;-webkit-tap-highlight-color:rgba(0,0,0,0);-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;-ms-overflow-style:scrollbar;background-color:#fff}body{font-size:160%;background:#fff;color:#0b0c0c;line-height:1.5;font-weight:400;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}strong{font-weight:600}a:link{color:#005ea5}a:visited{color:#4c2c92}a:active,a:hover{color:#2b8cc4}a{-webkit-tap-highlight-color:rgba(0,0,0,.3)}a:focus{background-color:#ffbf47;outline:3px solid #ffbf47}a,div,h1,h2,header,p,span,strong{border:none;margin:0;padding:0}h1,h2,p,strong{font-size:inherit;font-family:inherit;line-height:inherit;font-weight:400}#content{padding-bottom:30px;outline:none}@media (min-width:769px){#content{padding-bottom:90px}}main{font-family:Droid Sans,arial,helvetica,sans-serif;font-weight:400;text-transform:none;font-size:16px;line-height:1.25;-webkit-font-smoothing:antialiased}@media (min-width:641px){main{font-size:19px;line-height:1.3157894737}}p{margin-top:.3125em;margin-bottom:1.25em}@media (min-width:641px){p{margin-top:.2631578947em;margin-bottom:1.0526315789em}}header{background-color:#252525;border-bottom:8px solid #00634a;color:#fff;padding:15px 0}@media (max-width:640px){header{border-bottom-width:0;padding:7.5px 0}}header h1{background:url(hackney-logo.png) 0 0 no-repeat;background-size:contain;display:inline-block;height:62px;overflow:hidden;text-indent:100%;vertical-align:middle;white-space:nowrap;width:300px}@media (max-width:640px){header h1{height:35px;width:170px}}header a,header a:hover,header a:link,header a:visited{background-color:#252525;color:#fff;text-decoration:none}header h2{font-family:Droid Sans,arial,helvetica,sans-serif;font-weight:400;text-transform:none;font-size:18px;line-height:1.2;display:block;padding-top:9px;padding-bottom:6px;display:inline-block;margin-left:15px;vertical-align:middle}@media (min-width:641px){header h2{font-size:24px;line-height:1.25;padding-top:6px;padding-bottom:4px}}main{background-color:#fff;padding:1em 0}main strong{font-weight:700}main h1{font-family:Droid Sans,arial,helvetica,sans-serif;font-weight:400;text-transform:none;font-size:32px;line-height:1.09375;display:block;padding-top:10px;padding-bottom:10px;color:#00634a;font-weight:700;letter-spacing:-1px}@media (min-width:641px){main h1{font-size:48px;line-height:1.0416666667;padding-top:7px;padding-bottom:13px}}main h2{font-family:Droid Sans,arial,helvetica,sans-serif;font-weight:400;text-transform:none;font-size:20px;line-height:1.1111111111;display:block;padding-top:8px;padding-bottom:7px;font-weight:700;letter-spacing:-1px}@media (min-width:641px){main h2{font-size:27px;line-height:1.1111111111;padding-top:4px;padding-bottom:6px}}main p{line-height:1.5em}body,html{background-color:#252525}body{margin:0;padding:0;text-rendering:optimizeLegibility}
   </style>
 </head>
-
-<body class="rails-default-error-page">
-  <!-- This file lives in public/500.html -->
-  <div class="dialog">
-    <div>
-      <h1>We're sorry, but something went wrong.</h1>
+<body>
+  <header>
+    <div class="wrapper">
+      <h1>
+        Hackney
+      </h1>
+      <h2>
+        Report a repair
+      </h2>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
-  </div>
+  </header>
+
+  <main>
+    <div id="content" role="main">
+      <h1>
+        We're really sorry
+      </h1>
+      <p>
+        Something seems to have gone wrong while reporting your repair.
+      </p>
+      <p>
+        We've been notified of the issue and will do our best to fix it quickly.
+      </p>
+      <p>
+        <strong>
+          In the meantime please <a href='/pages/error_contact'>contact us</a> to finish reporting your repair.
+        </strong>
+      </p>
+    </div>
+  </main>
 </body>
 </html>
