--- a/public/404.html
+++ b/public/404.html
@@ -8,9 +8,16 @@
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <meta content="ie-edge" http-equiv="x-ua-compatible">
   <link href="https://fonts.googleapis.com/css?family=Droid+Sans:400,700" rel="stylesheet">
-  <style>
-    #content,.wrapper{max-width:960px;margin:0 15px}@media (min-width:641px){#content,.wrapper{margin:0 30px}}@media (min-width:1020px){#content,.wrapper{margin:0 auto}}#content:after{content:"";display:block;clear:both}body,html{font-family:Droid Sans,arial,helvetica,sans-serif}body,div,h1,h2,header,html{margin:0;padding:0;vertical-align:baseline}main{display:block}html{font-size:62.5%;overflow-y:scroll;-webkit-tap-highlight-color:rgba(0,0,0,0);-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;-ms-overflow-style:scrollbar;background-color:#fff}body{font-size:160%;background:#fff;color:#0b0c0c;line-height:1.5;font-weight:400;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}strong{font-weight:600}a:link{color:#005ea5}a:visited{color:#4c2c92}a:active,a:hover{color:#2b8cc4}a{-webkit-tap-highlight-color:rgba(0,0,0,.3)}a:focus{background-color:#ffbf47;outline:3px solid #ffbf47}a,div,h1,h2,header,p,span,strong{border:none;margin:0;padding:0}h1,h2,p,strong{font-size:inherit;font-family:inherit;line-height:inherit;font-weight:400}#content{padding-bottom:30px;outline:none}@media (min-width:769px){#content{padding-bottom:90px}}main{font-family:Droid Sans,arial,helvetica,sans-serif;font-weight:400;text-transform:none;font-size:16px;line-height:1.25;-webkit-font-smoothing:antialiased}@media (min-width:641px){main{font-size:19px;line-height:1.3157894737}}p{margin-top:.3125em;margin-bottom:1.25em}@media (min-width:641px){p{margin-top:.2631578947em;margin-bottom:1.0526315789em}}header{background-color:#252525;border-bottom:8px solid #00634a;color:#fff;padding:15px 0}@media (max-width:640px){header{border-bottom-width:0;padding:7.5px 0}}header h1{background:url(hackney-logo.png) 0 0 no-repeat;background-size:contain;display:inline-block;height:62px;overflow:hidden;text-indent:100%;vertical-align:middle;white-space:nowrap;width:300px}@media (max-width:640px){header h1{height:35px;width:170px}}header a,header a:hover,header a:link,header a:visited{background-color:#252525;color:#fff;text-decoration:none}header h2{font-family:Droid Sans,arial,helvetica,sans-serif;font-weight:400;text-transform:none;font-size:18px;line-height:1.2;display:block;padding-top:9px;padding-bottom:6px;display:inline-block;margin-left:15px;vertical-align:middle}@media (min-width:641px){header h2{font-size:24px;line-height:1.25;padding-top:6px;padding-bottom:4px}}main{background-color:#fff;padding:1em 0}main strong{font-weight:700}main h1{font-family:Droid Sans,arial,helvetica,sans-serif;font-weight:400;text-transform:none;font-size:32px;line-height:1.09375;display:block;padding-top:10px;padding-bottom:10px;color:#00634a;font-weight:700;letter-spacing:-1px}@media (min-width:641px){main h1{font-size:48px;line-height:1.0416666667;padding-top:7px;padding-bottom:13px}}main h2{font-family:Droid Sans,arial,helvetica,sans-serif;font-weight:400;text-transform:none;font-size:20px;line-height:1.1111111111;display:block;padding-top:8px;padding-bottom:7px;font-weight:700;letter-spacing:-1px}@media (min-width:641px){main h2{font-size:27px;line-height:1.1111111111;padding-top:4px;padding-bottom:6px}}main p{line-height:1.5em}body,html{background-color:#252525}body{margin:0;padding:0;text-rendering:optimizeLegibility}
-  </style>
+  <!--[if lt IE 9]>
+  <script src="html5shiv.js"></script>
+  <link rel="stylesheet" media="all" href="errors-ie8.css" />
+  <![endif]-->
+  <!--[if gt IE 8]>
+  <link rel="stylesheet" media="all" href="errors.css" />
+  <![endif]-->
+  <!--[if !IE]><!-->
+  <link rel="stylesheet" media="all" href="errors.css" />
+  <!-- <![endif]-->
 </head>
 <body>
   <header>
