(fix) Change 422 text to be more like 500
This wasn't really meaningful to a user - better to stick to generic
language, but keep the back link.

We think that a 422 normally happens when e.g. getting an uncaught
validation error from the database (rather than a model) so we might
never get one in this app.

--- a/public/422.html
+++ b/public/422.html
@@ -3,7 +3,7 @@
 <head>
   <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
   <title>
-    Report a repair - We're sorry, but the change you wanted was rejected (422)
+    Report a repair - We're really sorry, but something went wrong (422)
   </title>
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <meta content="ie-edge" http-equiv="x-ua-compatible">
@@ -34,14 +34,13 @@
   <main>
     <div id="content" role="main">
       <h1>
-        We're sorry, but the change you wanted was rejected
+        We're really sorry
       </h1>
       <p>
-        Perhaps you tried to change something you didn't have access to? 
+        Something seems to have gone wrong while reporting your repair.
       </p>
       <p>
-        Alternatively it's possible that there's a bug in the system.
-        If so, we've been notified of this issue and will do our best to fix it quickly.
+        We've been notified of the issue and will do our best to fix it quickly.
       </p>
       <p>
         <strong>
