(feature) 404 CTA is in bold

--- a/public/404.html
+++ b/public/404.html
@@ -42,8 +42,10 @@
         to the previous page
       </p>
       <p>
-        Alternatively you can 
-        <a href='/pages/error_contact'>contact us</a> to finish reporting your repair
+        <strong>
+          Alternatively you can 
+          <a href='/pages/error_contact'>contact us</a> to finish reporting your repair
+        </strong>
       </p>
     </div>
   </main>
